opam-version: "1.2"
name: "ReasonNativeProject"
version: "0.0.1"
maintainer: "Jordan Walke <jordojw@gmail.com>"
authors: [
  "Jordan Walke <jordojw@gmail.com>"
  "Maxwell Bernstein <max@bernsteinbear.com>"
]
license: "BSD"
homepage: "https://github.com/reasonml/ReasonNativeProject"
doc: "https://reasonml.github.io/ReasonNativeProject/"
bug-reports: "https://github.com/reasonml/ReasonNativeProject/issues"
dev-repo: "git://github.com/reasonml/ReasonNativeProject.git"
tags: [ "reason" "example" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "reason"  {= "2.0.0"}
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.05" ]
